--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
+    "@prismicio/client": "^7.3.1",
+    "@prismicio/next": "^1.5.0",
+    "@prismicio/react": "^2.7.3",
     "@studio-freight/react-lenis": "^0.0.44",
     "@studio-freight/tempus": "^0.0.44",
     "clsx": "^2.1.0",
@@ -21,11 +25,13 @@
     "react": "^18",
     "react-dom": "^18",
     "react-matter-js": "^1.0.4",
+    "sonner": "^1.4.3",
     "tailwind-gradient-mask-image": "^1.2.0",
     "tailwind-merge": "^2.2.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@slicemachine/adapter-next": "^0.3.37",
     "@types/node": "^20",
     "@types/platform": "^1.3.6",
     "@types/react": "^18",
@@ -38,6 +44,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "postcss": "^8",
+    "slice-machine-ui": "^1.25.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
