--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "playwright test",
     "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@axe-core/playwright": "^4.8.5",
     "@nextui-org/react": "^2.2.10",
     "@prismicio/client": "^7.3.1",
     "@prismicio/next": "^1.5.0",
@@ -27,10 +29,10 @@
     "react-matter-js": "^1.0.4",
     "sonner": "^1.4.3",
     "tailwind-gradient-mask-image": "^1.2.0",
-    "tailwind-merge": "^2.2.1",
-    "zustand": "^4.5.2"
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.42.1",
     "@slicemachine/adapter-next": "^0.3.37",
     "@types/node": "^20",
     "@types/platform": "^1.3.6",
