--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "test": "playwright test",
@@ -23,6 +24,7 @@
     "gsap": "^3.12.5",
     "matter-js": "^0.19.0",
     "next": "14.1.0",
+    "next-sitemap": "^4.2.3",
     "platform": "^1.3.6",
     "react": "^18",
     "react-dom": "^18",
@@ -32,6 +34,7 @@
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@lhci/cli": "^0.13.0",
     "@playwright/test": "^1.42.1",
     "@slicemachine/adapter-next": "^0.3.37",
     "@types/node": "^20",
