--- a/.github/workflows/lighthouseci.yml
+++ b/.github/workflows/lighthouseci.yml
@@ -1,7 +1,8 @@
 name: Lighthouse CI
 on: [push]
 jobs:
-  lighthouseci:
+  static-export-serve:
+    timeout-minutes: 30
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -10,4 +11,13 @@ jobs:
           node-version: 18
       - run: npm install && npm install -g @lhci/cli@0.13.x
       - run: npx serve@latest out
+  lighthouse-ci:
+    runs-on: ubuntu-latest
+    needs: [static-export-serve]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - run: npm install && npm install -g @lhci/cli@0.13.x
       - run: lhci autorun
