--- a/.github/workflows/lighthouseci.yml
+++ b/.github/workflows/lighthouseci.yml
@@ -9,6 +9,6 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-      - run: npm install && npm install -g @lhci/cli@0.13.x
+      - run: npm install && npm install -g @lhci/cli@0.13.x && npm install -D @wait-on@latest
       - run: npx serve@latest out & npx wait-on http://localhost:3000
       - run: lhci autorun
