--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "serve": "^14.2.1",
     "slice-machine-ui": "^1.25.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wait-on": "^7.2.0"
   }
 }
