--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prismicio/client": "^7.3.1",
     "@prismicio/next": "^1.5.0",
     "@prismicio/react": "^2.7.3",
+    "@sentry/nextjs": "^7.105.0",
     "@studio-freight/react-lenis": "^0.0.44",
     "@studio-freight/tempus": "^0.0.44",
     "clsx": "^2.1.0",
