--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "framer-motion": "^11.0.5",
     "gsap": "^3.12.5",
     "matter-js": "^0.19.0",
-    "next": "14.1.0",
+    "mixpanel-browser": "^2.50.0",
+    "next": "^14.2.3",
     "next-sitemap": "^4.2.3",
     "platform": "^1.3.6",
     "react": "^18",
@@ -39,6 +40,7 @@
     "@lhci/cli": "^0.13.0",
     "@playwright/test": "^1.42.1",
     "@slicemachine/adapter-next": "^0.3.37",
+    "@types/mixpanel-browser": "^2.49.0",
     "@types/node": "^20",
     "@types/platform": "^1.3.6",
     "@types/react": "^18",
